--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-db/app.db
-db/test.db
+# Dependencies
 node_modules
+
+# Database
+db/*.db
+
+# Environment
+.env
+.env.test
+
+# Build
+dist
+
+package-lock
